# ClaimCompass

./: .replit  README.md  pyproject.toml  replit.md
backend/: app.py  requirements.txt
frontend/: index.html  script.js  style.css
